syntax="proto3";

package greet;

message GreetRequest {
  string first_name = 1;
}

message GreetResponse {
  string greetings = 1;
}

service GreetService {
  rpc greet (GreetRequest) returns (GreetResponse);
  rpc greetManyTimes (GreetRequest) returns (stream GreetResponse);
}